--- a/app/src/main/res/layout/tips_fragment.xml
+++ b/app/src/main/res/layout/tips_fragment.xml
@@ -3,4 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_gravity="right"></TextView>
 </LinearLayout>
