--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/toolbar"
         android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:background="?attr/colorPrimary" >
+        android:background="@color/apple" >
 
     </android.support.v7.widget.Toolbar>
     <android.support.v4.widget.DrawerLayout
