--- a/app/src/main/res/layout/vets_fragment.xml
+++ b/app/src/main/res/layout/vets_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/parks_map"
+        android:id="@+id/vets_map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </LinearLayout>
