--- a/app/src/main/res/layout/vets_fragment.xml
+++ b/app/src/main/res/layout/vets_fragment.xml
@@ -39,8 +39,8 @@
 
                     <com.google.android.gms.maps.MapView
                         android:id="@+id/vets_map"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
                 </LinearLayout>
 
             </FrameLayout>
