--- a/app/src/main/res/layout/lost_found_fragmnet.xml
+++ b/app/src/main/res/layout/lost_found_fragmnet.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.TabLayout
-        android:id="@+id/lostfound"
+        android:id="@+id/lostTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/lostpager"
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
