Done work on project

--- a/app/src/main/res/layout/parks_fragment.xml
+++ b/app/src/main/res/layout/parks_fragment.xml
@@ -5,17 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.TabLayout
-        android:id="@+id/lostfound"
+        android:id="@+id/parkTabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white" />
     <com.google.android.gms.maps.MapView
         android:id="@+id/parks_map"
         android:layout_width="fill_parent"
