--- a/app/src/main/res/layout/parks_closest_fragment.xml
+++ b/app/src/main/res/layout/parks_closest_fragment.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/closeByParks" />
+        android:id="@+id/closeByParks"
+        android:listSelector="@drawable/list_row_selector"
+    />
 </LinearLayout>
