--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/list_row_selector">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/list_row_selector">
 
 
     <com.android.volley.toolbox.NetworkImageView
-        android:layout_marginTop="20dp"
-        android:id="@+id/thumbnail"
-        android:layout_width="fill_parent"
-        android:layout_height="350dp" />
+            android:id="@+id/thumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="350dp"
+            android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/length"
-        android:layout_marginTop="400dp"
-        android:layout_width="wrap_content"
-        android:padding="8dp"
-        android:layout_height="wrap_content"
-         />
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:layout_alignParentRight="true"
-        android:padding="8dp"
-        android:textStyle="bold" />
+            android:id="@+id/length"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="400dp"
+            android:padding="8dp"/>
 
     <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:padding="8dp"
-        android:layout_marginTop="420dp" />
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="400dp"
+            android:padding="8dp"
+            android:textStyle="bold"/>
+
+    <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="420dp"
+            android:padding="8dp"/>
 
     <Space
-        android:layout_width="fill_parent"
-        android:layout_marginTop="430dp"
-        android:layout_height="30dp"/>
+            android:layout_width="fill_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="430dp"/>
 
 </RelativeLayout>
