--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/apple">
+            android:background="@color/apple"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
 
     </android.support.v7.widget.Toolbar>
 
