--- a/app/src/main/res/layout/fragment_new_park.xml
+++ b/app/src/main/res/layout/fragment_new_park.xml
@@ -5,6 +5,10 @@
               android:layout_height="match_parent"
                 android:background="#E0E0E0"
               android:padding="10dp">
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -33,6 +37,7 @@
             android:layout_centerInParent="true"
             android:text="@string/accept"
             android:layout_below="@id/address"
+            android:src="@drawable/add_image"
             android:id="@+id/image"
             />
         <Button
@@ -45,4 +50,5 @@
 
 
     </RelativeLayout>
+        </ScrollView>
 </LinearLayout>
